--- a/debug/index.html
+++ b/debug/index.html
@@ -19,7 +19,7 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<title>NGOK</title>
-	<meta name="description" content="NGOK Better schedule" />
+	<meta name="description" content="Рассписание занятий НГОК" />
 	<meta name="keywords"
 		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, classes, lessons, schedule, рассписание, нгок, новоосибирск, новоосибирский, государственный, городской, открытый, open, колледж, college, open-college, занятий, занятия, уроков, уроки, предметов, предметы, только, лучше, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
@@ -30,7 +30,7 @@
 	<meta property="og:url" content="https://ngok.ma.cyou/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="NGOK" />
-	<meta property="og:description" content="NGOK Better schedule" />
+	<meta property="og:description" content="Рассписание занятий НГОК" />
 	<meta property="og:image"
 		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
@@ -38,7 +38,7 @@
 	<meta property="twitter:domain" content="ngok.ma.cyou" />
 	<meta property="twitter:url" content="https://ngok.ma.cyou/" />
 	<meta name="twitter:title" content="NGOK" />
-	<meta name="twitter:description" content="NGOK Better schedule" />
+	<meta name="twitter:description" content="Рассписание занятий НГОК" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
 		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
@@ -71,16 +71,16 @@
 	
 		<link href="../_app/immutable/assets/0.CQPIK5rz.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.hl2o2-tT.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.pJBwtvpB.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.BSxAW8vg.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.rx4t7BeQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.Dyn2-BR2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BxK_sjeS.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.COkDQMVY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.Da48tKRF.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.D70mLUkC.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.C9-aZaNw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/popper-layer-force-mount.Be-LmI6K.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.jBcB12fb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.Dz01YQd3.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BPEqkcfc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.wgxkhTys.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.qYZfauIB.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.vt-LFpTg.js">
@@ -99,7 +99,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_15hdxv8 = {
+					__sveltekit_1j0zuaf = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +108,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.hl2o2-tT.js"),
-						import("../_app/immutable/entry/app.BxK_sjeS.js")
+						import("../_app/immutable/entry/start.BSxAW8vg.js"),
+						import("../_app/immutable/entry/app.COkDQMVY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
