--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<title>NGOK</title>
-	<meta name="description" content="NGOK Better schedule" />
+	<meta name="description" content="Рассписание занятий НГОК" />
 	<meta name="keywords"
 		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, classes, lessons, schedule, рассписание, нгок, новоосибирск, новоосибирский, государственный, городской, открытый, open, колледж, college, open-college, занятий, занятия, уроков, уроки, предметов, предметы, только, лучше, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
@@ -30,7 +30,7 @@
 	<meta property="og:url" content="https://ngok.ma.cyou/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="NGOK" />
-	<meta property="og:description" content="NGOK Better schedule" />
+	<meta property="og:description" content="Рассписание занятий НГОК" />
 	<meta property="og:image"
 		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
@@ -38,7 +38,7 @@
 	<meta property="twitter:domain" content="ngok.ma.cyou" />
 	<meta property="twitter:url" content="https://ngok.ma.cyou/" />
 	<meta name="twitter:title" content="NGOK" />
-	<meta name="twitter:description" content="NGOK Better schedule" />
+	<meta name="twitter:description" content="Рассписание занятий НГОК" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
 		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
