--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BSxAW8vg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.rx4t7BeQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.nZYEz53u.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.RxQD84O7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dyn2-BR2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.COkDQMVY.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CXwQLWDl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Da48tKRF.js">
 </head>
 
@@ -81,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1j0zuaf = {
+					__sveltekit_i0qzzx = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BSxAW8vg.js"),
-						import("/_app/immutable/entry/app.COkDQMVY.js")
+						import("/_app/immutable/entry/start.nZYEz53u.js"),
+						import("/_app/immutable/entry/app.CXwQLWDl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
