--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<title>NGOK</title>
-	<meta name="description" content="Рассписание занятий НГОК" />
+	<meta name="description"
+		content="Этот вебсайт создан для удобного просмотра расписания Новосибирского Городского Открытого Колледжа как для студентов, так и для преподавателей. Он обеспечивает быстрый доступ к актуальному расписанию занятий и мероприятий, предлагая интуитивно понятный интерфейс и удобную навигацию для комфортного планирования учебного и рабочего времени." />
 	<meta name="keywords"
 		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent, ngok. нгок, better, classes, lessons, schedule, рассписание, нгок, новоосибирск, новоосибирский, государственный, городской, открытый, open, колледж, college, open-college, занятий, занятия, уроков, уроки, предметов, предметы, только, лучше, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
@@ -32,7 +33,7 @@
 	<meta property="og:title" content="NGOK" />
 	<meta property="og:description" content="Рассписание занятий НГОК" />
 	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
+		content="https://api.ma.cyou/og/?c=https://ngok.ma.cyou/favicon.svg&y=%D0%A0%D0%B0%D1%81%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%9D%D0%93%D0%9E%D0%9A,%20%D1%82%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE%20%D0%BB%D1%83%D1%87%D1%88%D0%B5!&o=%D0%AD%D1%82%D0%BE%D1%82%20%D0%B2%D0%B5%D0%B1%D1%81%D0%B0%D0%B9%D1%82%20%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%20%D0%B4%D0%BB%D1%8F%20%D1%83%D0%B4%D0%BE%D0%B1%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%BF%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80%D0%B0%20%D1%80%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D1%8F%20%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D0%B8%D0%B1%D0%B8%D1%80%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%93%D0%BE%D1%80%D0%BE%D0%B4%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%9E%D1%82%D0%BA%D1%80%D1%8B%D1%82%D0%BE%D0%B3%D0%BE%20%D0%9A%D0%BE%D0%BB%D0%BB%D0%B5%D0%B4%D0%B6%D0%B0%20%D0%BA%D0%B0%D0%BA%20%D0%B4%D0%BB%D1%8F%20%D1%81%D1%82%D1%83%D0%B4%D0%B5%D0%BD%D1%82%D0%BE%D0%B2,%20%D1%82%D0%B0%D0%BA%20%D0%B8%20%D0%B4%D0%BB%D1%8F%20%D0%BF%D1%80%D0%B5%D0%BF%D0%BE%D0%B4%D0%B0%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9.%20%D0%9E%D0%BD%20%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B8%D0%B2%D0%B0%D0%B5%D1%82%20%D0%B1%D1%8B%D1%81%D1%82%D1%80%D1%8B%D0%B9%20%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%20%D0%BA%20%D0%B0%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%BC%D1%83%20%D1%80%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D1%8E%20%D0%B7%D0%B0%D0%BD%D1%8F%D1%82%D0%B8%D0%B9%20%D0%B8%20%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D0%B9,%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BB%D0%B0%D0%B3%D0%B0%D1%8F%20%D0%B8%D0%BD%D1%82%D1%83%D0%B8%D1%82%D0%B8%D0%B2%D0%BD%D0%BE%20%D0%BF%D0%BE%D0%BD%D1%8F%D1%82%D0%BD%D1%8B%D0%B9%20%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D1%84%D0%B5%D0%B9%D1%81%20%D0%B8%20%D1%83%D0%B4%D0%BE%D0%B1%D0%BD%D1%83%D1%8E%20%D0%BD%D0%B0%D0%B2%D0%B8%D0%B3%D0%B0%D1%86%D0%B8%D1%8E%20%D0%B4%D0%BB%D1%8F%20%D0%BA%D0%BE%D0%BC%D1%84%D0%BE%D1%80%D1%82%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%BF%D0%BB%D0%B0%D0%BD%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F%20%D1%83%D1%87%D0%B5%D0%B1%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%B8%20%D1%80%D0%B0%D0%B1%D0%BE%D1%87%D0%B5%D0%B3%D0%BE%20%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%B8.&u=https://ngok.ma.cyou/" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ngok.ma.cyou" />
@@ -41,7 +42,7 @@
 	<meta name="twitter:description" content="Рассписание занятий НГОК" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
+		content="https://api.ma.cyou/og/?c=https://ngok.ma.cyou/favicon.svg&y=%D0%A0%D0%B0%D1%81%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%9D%D0%93%D0%9E%D0%9A,%20%D1%82%D0%BE%D0%BB%D1%8C%D0%BA%D0%BE%20%D0%BB%D1%83%D1%87%D1%88%D0%B5!&o=%D0%AD%D1%82%D0%BE%D1%82%20%D0%B2%D0%B5%D0%B1%D1%81%D0%B0%D0%B9%D1%82%20%D1%81%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%20%D0%B4%D0%BB%D1%8F%20%D1%83%D0%B4%D0%BE%D0%B1%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%BF%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80%D0%B0%20%D1%80%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D1%8F%20%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D0%B8%D0%B1%D0%B8%D1%80%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%93%D0%BE%D1%80%D0%BE%D0%B4%D1%81%D0%BA%D0%BE%D0%B3%D0%BE%20%D0%9E%D1%82%D0%BA%D1%80%D1%8B%D1%82%D0%BE%D0%B3%D0%BE%20%D0%9A%D0%BE%D0%BB%D0%BB%D0%B5%D0%B4%D0%B6%D0%B0%20%D0%BA%D0%B0%D0%BA%20%D0%B4%D0%BB%D1%8F%20%D1%81%D1%82%D1%83%D0%B4%D0%B5%D0%BD%D1%82%D0%BE%D0%B2,%20%D1%82%D0%B0%D0%BA%20%D0%B8%20%D0%B4%D0%BB%D1%8F%20%D0%BF%D1%80%D0%B5%D0%BF%D0%BE%D0%B4%D0%B0%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9.%20%D0%9E%D0%BD%20%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B8%D0%B2%D0%B0%D0%B5%D1%82%20%D0%B1%D1%8B%D1%81%D1%82%D1%80%D1%8B%D0%B9%20%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%20%D0%BA%20%D0%B0%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%BC%D1%83%20%D1%80%D0%B0%D1%81%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D1%8E%20%D0%B7%D0%B0%D0%BD%D1%8F%D1%82%D0%B8%D0%B9%20%D0%B8%20%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D0%B9,%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BB%D0%B0%D0%B3%D0%B0%D1%8F%20%D0%B8%D0%BD%D1%82%D1%83%D0%B8%D1%82%D0%B8%D0%B2%D0%BD%D0%BE%20%D0%BF%D0%BE%D0%BD%D1%8F%D1%82%D0%BD%D1%8B%D0%B9%20%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D1%84%D0%B5%D0%B9%D1%81%20%D0%B8%20%D1%83%D0%B4%D0%BE%D0%B1%D0%BD%D1%83%D1%8E%20%D0%BD%D0%B0%D0%B2%D0%B8%D0%B3%D0%B0%D1%86%D0%B8%D1%8E%20%D0%B4%D0%BB%D1%8F%20%D0%BA%D0%BE%D0%BC%D1%84%D0%BE%D1%80%D1%82%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%BF%D0%BB%D0%B0%D0%BD%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F%20%D1%83%D1%87%D0%B5%D0%B1%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%B8%20%D1%80%D0%B0%D0%B1%D0%BE%D1%87%D0%B5%D0%B3%D0%BE%20%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%B8.&u=https://ngok.ma.cyou/" />
 
 	<script async>
 		(function () {
@@ -69,21 +70,21 @@
 	</script>
 
 	
-		<link href="./_app/immutable/assets/0.CQPIK5rz.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.R4x_rqGQ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.nZYEz53u.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RxQD84O7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Dyn2-BR2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CxvFcR09.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CXwQLWDl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Da48tKRF.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Blqj9yWJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.Be-LmI6K.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.jBcB12fb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CizMWXuU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.wgxkhTys.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cqw3cs_R.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.vt-LFpTg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CI7oqr59.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CQ-bIkv9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.CI7qWqNG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.7rmYIZYA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B_nrHvPG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DYIsEywr.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CsovUt1T.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.Cka-yoaF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.D4mFZbrI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DgFmFsQw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.Czq8Up7Y.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CySu5hPQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/fetchTableData.D41Ek5sk.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -99,7 +100,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_i0qzzx = {
+					__sveltekit_11plqno = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +109,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.nZYEz53u.js"),
-						import("./_app/immutable/entry/app.CXwQLWDl.js")
+						import("./_app/immutable/entry/start.CI7oqr59.js"),
+						import("./_app/immutable/entry/app.B_nrHvPG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
