--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BmhsdnfS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DSjKE4qG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BgPxKkVj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dc9Nw8Cz.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CI7qWqNG.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.7rmYIZYA.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B7anqhdp.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.4JGPQyOh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.DYIsEywr.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_ft0ixm = {
+					__sveltekit_11ost3o = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BmhsdnfS.js"),
-						import("/_app/immutable/entry/app.B7anqhdp.js")
+						import("/_app/immutable/entry/start.BgPxKkVj.js"),
+						import("/_app/immutable/entry/app.4JGPQyOh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
