--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.KHiidxX-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BmwDeiqB.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BAlTbb-K.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Divxs8HW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CI7qWqNG.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.7rmYIZYA.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cv_XV9DK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.kOaIJ8hD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.DYIsEywr.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1q4qsc8 = {
+					__sveltekit_uzuk2j = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.KHiidxX-.js"),
-						import("/_app/immutable/entry/app.Cv_XV9DK.js")
+						import("/_app/immutable/entry/start.BAlTbb-K.js"),
+						import("/_app/immutable/entry/app.kOaIJ8hD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
