--- a/debug/index.html
+++ b/debug/index.html
@@ -72,16 +72,16 @@
 	
 		<link href="../_app/immutable/assets/0.R4x_rqGQ.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.BAlTbb-K.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Divxs8HW.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DxP3ugPC.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.kYqsUfps.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.CI7qWqNG.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.7rmYIZYA.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.kOaIJ8hD.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.iSjSn3J3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.DYIsEywr.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DpVAlVp6.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.BtyIB8Og.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/popper-layer-force-mount.Cka-yoaF.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.D4mFZbrI.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BSXBHSOK.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.o3DGECDy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.Czq8Up7Y.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.BIxHzvcg.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.D41Ek5sk.js">
@@ -100,7 +100,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_uzuk2j = {
+					__sveltekit_17bxk8i = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -109,8 +109,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.BAlTbb-K.js"),
-						import("../_app/immutable/entry/app.kOaIJ8hD.js")
+						import("../_app/immutable/entry/start.DxP3ugPC.js"),
+						import("../_app/immutable/entry/app.iSjSn3J3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
