--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DxP3ugPC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.kYqsUfps.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CI7qWqNG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.7rmYIZYA.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.iSjSn3J3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.DYIsEywr.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.B8qcQYGf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BnBgXE8U.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.nbO-tEiT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.DTHFrT_q.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BO8qaYzm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BrHXlJdl.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_17bxk8i = {
+					__sveltekit_1el8q9j = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DxP3ugPC.js"),
-						import("/_app/immutable/entry/app.iSjSn3J3.js")
+						import("/_app/immutable/entry/start.B8qcQYGf.js"),
+						import("/_app/immutable/entry/app.BO8qaYzm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
