--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B8qcQYGf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BnBgXE8U.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.nbO-tEiT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DTHFrT_q.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BO8qaYzm.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BrHXlJdl.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DzqChw22.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.5KkIhwy8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.G3MfLldh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.HfsHy5-N.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.YFPZphdZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D1fEuhDt.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1el8q9j = {
+					__sveltekit_cwivne = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B8qcQYGf.js"),
-						import("/_app/immutable/entry/app.BO8qaYzm.js")
+						import("/_app/immutable/entry/start.DzqChw22.js"),
+						import("/_app/immutable/entry/app.YFPZphdZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
