--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DzqChw22.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.5KkIhwy8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CK5Ke-Hg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BJv9Tpdn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.G3MfLldh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.HfsHy5-N.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.YFPZphdZ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DETM9LKa.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D1fEuhDt.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_cwivne = {
+					__sveltekit_15ofqfu = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DzqChw22.js"),
-						import("/_app/immutable/entry/app.YFPZphdZ.js")
+						import("/_app/immutable/entry/start.CK5Ke-Hg.js"),
+						import("/_app/immutable/entry/app.DETM9LKa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
