--- a/debug/index.html
+++ b/debug/index.html
@@ -72,16 +72,16 @@
 	
 		<link href="../_app/immutable/assets/0.0y0OTdPx.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.CK5Ke-Hg.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.BJv9Tpdn.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CoDAHUMs.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.CmFsa3XY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.G3MfLldh.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.HfsHy5-N.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.DETM9LKa.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.D5SYR3OA.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.D1fEuhDt.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.HN_KsipG.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.Crq_OWHO.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/language.DHuydBBX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.BElOc5II.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DmhbE1id.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.BIQvivLw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.BJ6bSosv.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/separator.EebW97y-.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.D4NDSzeq.js">
@@ -101,7 +101,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_15ofqfu = {
+					__sveltekit_5rwj83 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -110,8 +110,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.CK5Ke-Hg.js"),
-						import("../_app/immutable/entry/app.DETM9LKa.js")
+						import("../_app/immutable/entry/start.CoDAHUMs.js"),
+						import("../_app/immutable/entry/app.D5SYR3OA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
