--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CoDAHUMs.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CmFsa3XY.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C1RngZiQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DLMiqh6I.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.G3MfLldh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.HfsHy5-N.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D5SYR3OA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.D1fEuhDt.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cp6_ZDTS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C7FdXTUU.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_5rwj83 = {
+					__sveltekit_2bq1bo = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CoDAHUMs.js"),
-						import("/_app/immutable/entry/app.D5SYR3OA.js")
+						import("/_app/immutable/entry/start.C1RngZiQ.js"),
+						import("/_app/immutable/entry/app.Cp6_ZDTS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
