--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C1RngZiQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DLMiqh6I.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BbwsGChQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CpzmEwau.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.G3MfLldh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.HfsHy5-N.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cp6_ZDTS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BwwJ_X7f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C7FdXTUU.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_2bq1bo = {
+					__sveltekit_1sipyu4 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C1RngZiQ.js"),
-						import("/_app/immutable/entry/app.Cp6_ZDTS.js")
+						import("/_app/immutable/entry/start.BbwsGChQ.js"),
+						import("/_app/immutable/entry/app.BwwJ_X7f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
