--- a/404.html
+++ b/404.html
@@ -70,27 +70,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BbwsGChQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CpzmEwau.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.G3MfLldh.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.HfsHy5-N.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BwwJ_X7f.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.C7FdXTUU.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DGWovh0K.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DztUPtBE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DjiPo3H_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.4e1ancKm.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BGlo12Gh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BcE3qx5O.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1sipyu4 = {
+					__sveltekit_11v2chc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BbwsGChQ.js"),
-						import("/_app/immutable/entry/app.BwwJ_X7f.js")
+						import("/_app/immutable/entry/start.DGWovh0K.js"),
+						import("/_app/immutable/entry/app.BGlo12Gh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
