--- a/debug/index.html
+++ b/debug/index.html
@@ -72,16 +72,16 @@
 	
 		<link href="../_app/immutable/assets/0.0y0OTdPx.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.oF1_Fg5k.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DmUuBHhw.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.C4rrKEaW.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.D15wSXnw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.C_pZt7TH.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DqDULXDt.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.BcE3qx5O.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7I3ILWz-.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.CCzmyqNY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/language.eQF8NDpq.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.IwKE2Hdx.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CFysJKet.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.CNJM1_Bl.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.DKrLSvCL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/separator.FmqlxLYk.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.CENHC3-_.js">
@@ -97,11 +97,11 @@ overflow: hidden;
 clip: rect(0, 0, 0, 0);
 white-space: nowrap;
 border-width: 0;
-transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--[!--><button class="focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border-input bg-background hover:bg-accent hover:text-accent-foreground border shadow-sm h-9 px-4 py-2 my-1 w-full min-w-[256px] md:w-2/3 lg:w-1/2 2xl:w-1/3" type="button"><!---->Fetch<!----></button><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-wrap justify-center gap-2 px-2 py-4 text-xs text-muted-foreground"><!--[--><a href="https://ma.cyou/" class="hover:text-foreground">Author's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-14" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-15" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-16" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a> <!--[!--><!--]--><!--]--></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]--><!----> <!--[!--><!--[!--><button class="focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border-input bg-background hover:bg-accent hover:text-accent-foreground border shadow-sm h-9 px-4 py-2 my-1 w-full min-w-[256px] md:w-2/3 lg:w-1/2 2xl:w-1/3" type="button"><!---->Fetch<!----></button><!--]--><!--]--><!--]--></div><!----><!----> <footer class="flex flex-wrap justify-center gap-2 px-2 py-4 text-xs text-muted-foreground"><!--[--><a href="https://ma.cyou/" class="hover:text-foreground">Author</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-14" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://opencollege-nsk.ru/" class="hover:text-foreground">NGOK's site</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-15" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://docs.google.com/spreadsheets/d/1FiMov0r4UUDKT6A56NWMImpoUakDC2YDevgaOpJQ7Qc/" class="hover:text-foreground">Schedule table</a> <!--[--><!----><!--[!--><div class="shrink-0 min-h-full w-[1px] bg-muted-foreground bg-opacity-50" id="bits-16" role="separator" aria-orientation="vertical" data-orientation="vertical" data-separator-root=""><!----></div><!--]--><!----><!--]--><a href="https://github.com/Mapagmataas1331/NGOK-Better-schedule" class="hover:text-foreground">Source code</a> <!--[!--><!--]--><!--]--></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_oda332 = {
+					__sveltekit_1ua7q2i = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -110,8 +110,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.oF1_Fg5k.js"),
-						import("../_app/immutable/entry/app.C_pZt7TH.js")
+						import("../_app/immutable/entry/start.C4rrKEaW.js"),
+						import("../_app/immutable/entry/app.DqDULXDt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
