--- a/404.html
+++ b/404.html
@@ -70,11 +70,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DuCFK4nU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.e4uKlFEm.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BMdWZ_kS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B44iY_YA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BHdmdyaE.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Bwy3--Ob.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BcE3qx5O.js">
 </head>
 
@@ -82,15 +82,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1llk3wc = {
+					__sveltekit_kamcgs = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DuCFK4nU.js"),
-						import("/_app/immutable/entry/app.BHdmdyaE.js")
+						import("/_app/immutable/entry/start.BMdWZ_kS.js"),
+						import("/_app/immutable/entry/app.Bwy3--Ob.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
