--- a/debug/index.html
+++ b/debug/index.html
@@ -70,22 +70,22 @@
 	</script>
 
 	
-		<link href="../_app/immutable/assets/0.Dylsuclq.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.C6-k3ead.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DuCFK4nU.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.e4uKlFEm.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.BMdWZ_kS.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.B44iY_YA.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/utils.DjiPo3H_.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BHdmdyaE.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Bwy3--Ob.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.BcE3qx5O.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.C1wRfZqw.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/language.eQF8NDpq.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.IwKE2Hdx.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.wcaLcNZw.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.DKrLSvCL.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/separator.FmqlxLYk.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.CENHC3-_.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.CGPl5xUL.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.C4OeQi8H.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/language.DAi2VTky.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.DXehcZQQ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.D8EOVYlA.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.lFd19A4p.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/separator.Ct6CMjFy.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.BSf6H8E5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.CtUn2Rmc.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -101,7 +101,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1llk3wc = {
+					__sveltekit_kamcgs = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -110,8 +110,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DuCFK4nU.js"),
-						import("../_app/immutable/entry/app.BHdmdyaE.js")
+						import("../_app/immutable/entry/start.BMdWZ_kS.js"),
+						import("../_app/immutable/entry/app.Bwy3--Ob.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
