--- a/debug/index.html
+++ b/debug/index.html
@@ -70,22 +70,23 @@
 	</script>
 
 	
-		<link href="../_app/immutable/assets/0.C6-k3ead.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.CBqqcZo2.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.BMdWZ_kS.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.B44iY_YA.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/utils.DjiPo3H_.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.4e1ancKm.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.Bwy3--Ob.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.BcE3qx5O.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.C4OeQi8H.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/language.DAi2VTky.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.DXehcZQQ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.D8EOVYlA.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.lFd19A4p.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/separator.Ct6CMjFy.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.BSf6H8E5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.CtUn2Rmc.js">
+		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.qjQblOjY.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.CAjptZ9z.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/utils.CAqZFEvz.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.-oI_k6G5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Cbtcq7j4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/disclose-version.CpXVhQZh.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.DoALYEGI.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/language.Czrv4BRi.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.mFykl5Xo.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Logo.DtFYEW8W.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.CWI7YaRx.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Toaster.B8boEK3D.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.DWInDEwy.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/fetchTableData.MVGgtbH1.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -101,7 +102,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_kamcgs = {
+					__sveltekit_11hgiu4 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -110,8 +111,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.BMdWZ_kS.js"),
-						import("../_app/immutable/entry/app.Bwy3--Ob.js")
+						import("../_app/immutable/entry/start.qjQblOjY.js"),
+						import("../_app/immutable/entry/app.Cbtcq7j4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
